# Compilador

./: .clang-format  .clangd  .gitignore  CC-2024-2-LL1.grm  CC-2024-2.grm  CMakeLists.txt  ConvCC-2024-2-LL1.grm  EXPA-SDD.grm  Makefile  README.md  TODO.md  astnode.h  compile_commands.json  context.cpp  context.h  main  main2.py  make.sh  scope.cpp  scope.h  state_machine  state_machine.cpp  symbol.cpp  symbol.h  theme_qtcreator.xml  token.h
Código antigo/: LICENSE  main.py  state_machine.cpp
Código antigo/state_machine_generator/: output.md
docs/: ConvCC-2024-2-LL1.grm  EXPA-SDT.grm  grammar_ll1.py
old_src/: nova-gramatica-3g.txt  state_machine.cpp
old_src/src/: lexical_analyzer.hpp
src/: lexical_analyser.hpp  log.hpp  main.cpp  semantic_analyser.hpp  syntactic_analyser.hpp  syntactic_analyzer.hpp  syntatic_analyser.cpp  syntatic_analyzer.cpp  test.cpp
src/binary_tree/: binary_tree.cpp  binary_tree.hpp
src/compiler/: compiler.cpp  compiler.hpp
src/lexical_analyser/: lexical_analyser.cpp  lexical_analyser.hpp  token.cpp  token.hpp  token_property.cpp  token_property.hpp  token_property_base.hpp  token_type.cpp  token_type.hpp
src/log/: log.cpp  log.hpp  log_thread_safe.cpp  log_thread_safe.hpp
src/semantic_analyser/: ast_and_result.cpp  ast_and_result.hpp  ast_node.cpp  ast_node.hpp  return_value.cpp  return_value.hpp  scope.cpp  scope.hpp  semantic_analyser.cpp  semantic_analyser.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  symbol_type.cpp  symbol_type.hpp
src/syntactic_analyser/: ast_node.cpp  ast_node.hpp  grammar.cpp  grammar.hpp  non_terminal.cpp  non_terminal.hpp  syntactic_analyser.cpp  syntactic_analyser.hpp  term.cpp  term.hpp  term_type.cpp  term_type.hpp
state_machine/: state_machine  state_machine.cpp
state_machine_generator/: output.md  state_machine.cpp
xpp/: arquivo1.xpp  arquivo2.xpp  arquivo3.xpp  empty.xpp  errolex.xpp  errosin.xpp  funcoes.xpp  primo.xpp
